Implements String valued env var lookups for Provided config values Splits ConfigResolver into ConfigResolver and ConfigRuleEvaluator to simplify responsibilities Moves current default context, envId storage into the ConfigStore