@@ -2,45 +2,52 @@ package cloud.prefab.client.internal;
 
 import cloud.prefab.client.ConfigStore;
 import cloud.prefab.client.config.ConfigElement;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.util.Collection;
-import java.util.Enumeration;
-import java.util.Iterator;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
 
 public class ConfigStoreImpl implements ConfigStore {
 
-  private final AtomicReference<ImmutableMap<String, ConfigElement>> localMap = new AtomicReference<>(
-    ImmutableMap.of()
+  private final AtomicReference<MergedConfigData> data = new AtomicReference<>(
+    new MergedConfigData(Map.of(), 0, DefaultContextWrapper.empty())
   );
 
   @Override
   public Collection<String> getKeys() {
-    return localMap.get().keySet();
+    return data.get().getConfigs().keySet();
   }
 
-  public ImmutableSet<Map.Entry<String, ConfigElement>> entrySet() {
-    return localMap.get().entrySet();
+  public Set<Map.Entry<String, ConfigElement>> entrySet() {
+    return data.get().getConfigs().entrySet();
   }
 
   @Override
   public Collection<ConfigElement> getElements() {
-    return localMap.get().values();
+    return data.get().getConfigs().values();
   }
 
-  public void set(ImmutableMap<String, ConfigElement> newData) {
-    localMap.set(newData);
+  public void set(MergedConfigData mergedConfigData) {
+    data.set(mergedConfigData);
   }
 
   @Override
   public ConfigElement getElement(String key) {
-    return localMap.get().get(key);
+    return data.get().getConfigs().get(key);
   }
 
   @Override
   public boolean containsKey(String key) {
-    return localMap.get().containsKey(key);
+    return data.get().getConfigs().containsKey(key);
+  }
+
+  @Override
+  public long getProjectEnvironmentId() {
+    return data.get().getEnvId();
+  }
+
+  @Override
+  public DefaultContextWrapper getDefaultContext() {
+    return data.get().getDefaultContextWrapper();
   }
 }
